[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic(Net)/AXD.vb


    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiLevelSetInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelSetInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelSetInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFFFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelSetInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiLevelGetInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upLevel   : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelGetInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upLevel   : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelGetInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upLevel   : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiLevelGetInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 전체 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiLevelSetInport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 전체 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiLevelGetInport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    ' 지정한 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoLevelSetOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelSetOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelSetOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFFFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelSetOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoLevelGetOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelGetOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelGetOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 지정한 입, 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoLevelGetOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

    ' 전체 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoLevelSetOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 전체 입, 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 확인
    '==============================================================================================='
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoLevelGetOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer
    '========== 입출력 포트 쓰기 읽기 =================================================================================

    ' 전체 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 출력
    '==============================================================================================='
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoWriteOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 출력
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uLevel     : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoWriteOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer
